Regenerated skeleton application from the current sampleapp