@@ -1,5 +1,5 @@
 /*
- * Copyright 2021 Steinar Bang
+ * Copyright 2024 Steinar Bang
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,6 +17,7 @@ package no.priv.bang.handlelapp.backend;
 
 import static no.priv.bang.handlelapp.services.HandlelappConstants.*;
 import java.sql.Connection;
+import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
@@ -29,8 +30,8 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.ResourceBundle;
+import java.util.Set;
 import java.util.stream.Collectors;
-
 import javax.sql.DataSource;
 
 import org.osgi.service.component.annotations.Activate;
@@ -39,9 +40,11 @@ import org.osgi.service.component.annotations.Reference;
 import org.osgi.service.log.LogService;
 import org.osgi.service.log.Logger;
 
-import no.priv.bang.handlelapp.services.Account;
-import no.priv.bang.handlelapp.services.LocaleBean;
 import no.priv.bang.handlelapp.services.HandlelappService;
+import no.priv.bang.handlelapp.services.beans.Account;
+import no.priv.bang.handlelapp.services.beans.CounterBean;
+import no.priv.bang.handlelapp.services.beans.CounterIncrementStepBean;
+import no.priv.bang.handlelapp.services.beans.LocaleBean;
 import no.priv.bang.osgiservice.users.Role;
 import no.priv.bang.osgiservice.users.User;
 import no.priv.bang.osgiservice.users.UserManagementService;
@@ -77,11 +80,44 @@ public class HandlelappServiceProvider implements HandlelappService {
     }
 
     @Override
+    public boolean lazilyCreateAccount(String username) {
+        try(Connection connection = datasource.getConnection()) {
+            int accountid = findAccount(connection, username);
+
+            if (accountid != -1) {
+                return false;
+            }
+
+            try(PreparedStatement createAccount = connection.prepareStatement("insert into handlelapp_accounts (username) values (?)")) {
+                createAccount.setString(1, username);
+                createAccount.executeUpdate();
+            }
+
+            accountid = findAccount(connection, username);
+            try(PreparedStatement createIncrementStep = connection.prepareStatement("insert into counter_increment_steps (account_id) values (?)")) {
+                createIncrementStep.setInt(1, accountid);
+                createIncrementStep.executeUpdate();
+            }
+
+            try(PreparedStatement createCounter = connection.prepareStatement("insert into counters (account_id) values (?)")) {
+                createCounter.setInt(1, accountid);
+                createCounter.executeUpdate();
+            }
+
+            return true;
+        } catch (SQLException e) {
+            logger.warn("Failed to create handlelapp account for username \"{}\"", username, e);
+        }
+
+        return false;
+    }
+
+    @Override
     public List<Account> getAccounts() {
         List<Account> accounts = new ArrayList<>();
         try(Connection connection = datasource.getConnection()) {
             try(Statement statement = connection.createStatement()) {
-                try(ResultSet results = statement.executeQuery("select * from accounts")) {
+                try(ResultSet results = statement.executeQuery("select * from handlelapp_accounts")) {
                     while(results.next()) {
                         int accountId = results.getInt(1);
                         String username = results.getString(2);
@@ -93,10 +129,96 @@ public class HandlelappServiceProvider implements HandlelappService {
             }
 
         } catch (SQLException e) {
-            logger.error("Ingen handlelapp");
+            logger.error("Ingen handlelapp", e);
         }
 
         return accounts;
+    }
+
+    @Override
+    public Optional<CounterIncrementStepBean> getCounterIncrementStep(String username) {
+        try(Connection connection = datasource.getConnection()) {
+            Integer counterIncrementStep = findCounterIncrementStep(connection, username);
+            if (counterIncrementStep != null) {
+                CounterIncrementStepBean bean = CounterIncrementStepBean.with()
+                    .username(username)
+                    .counterIncrementStep(counterIncrementStep)
+                    .build();
+                return Optional.of(bean);
+            }
+        } catch (SQLException e) {
+            logger.error("No increment steps could be found for user \"{}\"", username, e);
+        }
+
+        return Optional.empty();
+    }
+
+    @Override
+    public Optional<CounterIncrementStepBean> updateCounterIncrementStep(CounterIncrementStepBean updatedIncrementStep) {
+        String username = updatedIncrementStep.getUsername();
+        try(Connection connection = datasource.getConnection()) {
+            try(PreparedStatement statement = connection.prepareStatement("update counter_increment_steps set counter_increment_step=? where account_id in (select account_id from handlelapp_accounts where username=?)")) {
+                statement.setInt(1, updatedIncrementStep.getCounterIncrementStep());
+                statement.setString(2, username);
+                statement.executeUpdate();
+            }
+        } catch (SQLException e) {
+            logger.error("Unable to update increment step for user \"{}\"", username, e);
+            return Optional.empty();
+        }
+
+        return getCounterIncrementStep(username);
+    }
+
+    @Override
+    public Optional<CounterBean> getCounter(String username) {
+        try(Connection connection = datasource.getConnection()) {
+            return findAndCreateCounterBean(connection, username);
+        } catch (SQLException e) {
+            logger.error("No counter could be found for user \"{}\"", username, e);
+        }
+
+        return Optional.empty();
+    }
+
+    @Override
+    public Optional<CounterBean> incrementCounter(String username) {
+        try(Connection connection = datasource.getConnection()) {
+            var incrementStep = findCounterIncrementStep(connection, username);
+            var counter = findCounter(connection, username);
+
+            try(PreparedStatement statement = connection.prepareStatement("update counters set counter=? where account_id in (select account_id from handlelapp_accounts where username=?)")) {
+                statement.setInt(1, counter + incrementStep);
+                statement.setString(2, username);
+                statement.executeUpdate();
+            }
+
+            return findAndCreateCounterBean(connection, username);
+        } catch (SQLException e) {
+            logger.warn("Failed to increment counter for user \"{}\"", username, e);
+        }
+
+        return Optional.empty();
+    }
+
+    @Override
+    public Optional<CounterBean> decrementCounter(String username) {
+        try(Connection connection = datasource.getConnection()) {
+            var incrementStep = findCounterIncrementStep(connection, username);
+            var counter = findCounter(connection, username);
+
+            try(PreparedStatement statement = connection.prepareStatement("update counters set counter=? where account_id in (select account_id from handlelapp_accounts where username=?)")) {
+                statement.setInt(1, counter - incrementStep);
+                statement.setString(2, username);
+                statement.executeUpdate();
+            }
+
+            return findAndCreateCounterBean(connection, username);
+        } catch (SQLException e) {
+            logger.warn("Failed to decrement counter for user \"{}\"", username, e);
+        }
+
+        return Optional.empty();
     }
 
     @Override
@@ -106,7 +228,7 @@ public class HandlelappServiceProvider implements HandlelappService {
 
     @Override
     public List<LocaleBean> availableLocales() {
-        return Arrays.asList(Locale.forLanguageTag("nb-NO"), Locale.UK).stream().map(l -> LocaleBean.with().locale(l).build()).collect(Collectors.toList());
+        return Arrays.asList(Locale.forLanguageTag("nb-NO"), Locale.UK).stream().map(l -> LocaleBean.with().locale(l).build()).toList();
     }
 
     @Override
@@ -121,13 +243,58 @@ public class HandlelappServiceProvider implements HandlelappService {
         return bundle.getString(key);
     }
 
-    private void addRolesIfNotpresent() {
-        String handlelappuser = SAMPLEAPPUSER_ROLE;
-        List<Role> roles = useradmin.getRoles();
-        Optional<Role> existingRole = roles.stream().filter(r -> handlelappuser.equals(r.getRolename())).findFirst();
-        if (!existingRole.isPresent()) {
-            useradmin.addRole(Role.with().id(-1).rolename(handlelappuser).description("Bruker av applikasjonen handlelapp").build());
+    private int findAccount(Connection connection, String username) throws SQLException {
+        try(PreparedStatement findAccount = connection.prepareStatement("select * from handlelapp_accounts where username=?")) {
+            findAccount.setString(1, username);
+            try(ResultSet results = findAccount.executeQuery()) {
+                while (results.next()) {
+                    return results.getInt(1);
+                }
+            }
         }
+
+        return -1;
+    }
+
+    private Integer findCounterIncrementStep(Connection connection, String username) throws SQLException {
+        try(PreparedStatement statement = connection.prepareStatement("select * from counter_increment_steps c join handlelapp_accounts a on c.account_id=a.account_id where a.username=?")) {
+            statement.setString(1, username);
+            try(ResultSet results = statement.executeQuery()) {
+                while(results.next()) {
+                    return results.getInt(3);
+                }
+            }
+        }
+
+        return null;
+    }
+
+    private Integer findCounter(Connection connection, String username) throws SQLException {
+        try(PreparedStatement statement = connection.prepareStatement("select * from counters c join handlelapp_accounts a on c.account_id=a.account_id where a.username=?")) {
+            statement.setString(1, username);
+            try(ResultSet results = statement.executeQuery()) {
+                while(results.next()) {
+                    return results.getInt(3);
+                }
+            }
+        }
+
+        return null;
+    }
+
+    private Optional<CounterBean> findAndCreateCounterBean(Connection connection, String username) throws SQLException {
+        Integer counter = findCounter(connection, username);
+        return counter != null ?
+            Optional.of(CounterBean.with().counter(counter).build()) :
+            Optional.empty();
+    }
+
+    private void addRolesIfNotpresent() {
+        var handlelapproles = Map.of(HANDLELAPPUSER_ROLE, "Bruker av applikasjonen handlelapp");
+        Set<String> existingroles = useradmin.getRoles().stream().map(Role::getRolename).collect(Collectors.toSet());
+        handlelapproles.entrySet().stream()
+            .filter(r -> !existingroles.contains(r.getKey()))
+            .forEach(r ->  useradmin.addRole(Role.with().id(-1).rolename(r.getKey()).description(r.getValue()).build()));
     }
 
     Map<String, String> transformResourceBundleToMap(Locale locale) {
